<resources>
    <string name="app_name">Navi</string>

    <!-- Nouns -->
    <string name="noun_error">Error</string>
    <string name="noun_email">Correo electrónico</string>
    <string name="noun_username">Nombre de usuario</string>
    <string name="noun_password">Contraseña</string>
    <string name="noun_repeat_password">Repetir contraseña</string>
    <string name="noun_names">Nombres</string>
    <string name="noun_last_names">Apellidos</string>
    <string name="noun_birth_date">Fecha de nacimiento</string>
    <string name="noun_foundation_date">Fecha de fundación</string>
    <string name="noun_home">Inicio</string>
    <string name="noun_profile">Perfil</string>
    <string name="noun_travels">Viajes</string>
    <string name="noun_number">Numéro telefónico</string>
    <string name="noun_ci">CI</string>
    <string name="noun_country">País</string>
    <string name="noun_city">Ciudad</string>
    <string name="noun_agency_name">Nombre de agencia</string>
    <string name="noun_description">Descripción</string>
    <string name="noun_biography">Biografía</string>
    <string name="noun_interests">Intereses</string>
    <string name="noun_phone">Teléfono</string>
    <string name="noun_address">Dirección</string>
    <string name="noun_products">Productos</string>
    <string name="noun_guide">Guía</string>
    <string name="noun_ratings">Calificaciones</string>
    <string name="noun_services">Servicios</string>
    <string name="noun_location">Ubicación</string>
    <string name="noun_available_dates">Fechas disponibles</string>
    <string name="noun_more_lookalikes">Más similares</string>
    <string name="noun_person">persona</string>

    <!-- Actions -->
    <string name="action_start">Comenzar</string>
    <string name="action_create_account">Crear cuenta</string>
    <string name="action_continue_with_facebook">Continuar con Facebook</string>
    <string name="action_continue_with_google">Continuar con Google</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_wait">Por favor espere</string>
    <string name="action_processing">Procesando...</string>
    <string name="action_travel_and_destinies">Viajar y buscar destinos</string>
    <string name="action_guidance">Ser guía turístico</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_reserve">Reservar</string>
    <string name="action_search">Buscar</string>
    <string name="action_select_an_option">Selecciona una opción</string>

    <!-- Error -->
    <string name="error_unknown">Error desconocido</string>
    <string name="error_invalid_names">Ingresa un nombre válido</string>
    <string name="error_invalid_user">Ingresa un usuario un válido</string>
    <string name="error_invalid_last_names">Ingresa un apellido válido</string>
    <string name="error_empty_date">Ingresa una fecha</string>
    <string name="error_empty_country">Ingresa un país</string>
    <string name="error_invalid_phone">Ingresa un número válido</string>
    <string name="error_invalid_email">Ingresa un correo válido</string>
    <string name="error_invalid_password">La contraseña debe tener mínimo un número, un caracter especial y debe tener mayúsculas</string>
    <string name="error_invalid_second_password">Las contraseñas no coinciden</string>

    <!-- Titles -->
    <string name="title_login">Inicio de sesión</string>
    <string name="title_register">Crear cuenta</string>

    <!-- Questions -->
    <string name="question_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="question_interest">¿Qué te interesa hacer con Navi?</string>
    <string name="question_plan_search">¿Qué planes?</string>
    <string name="question_agency">¿Representas una agencia de turismo?</string>

    <!-- Messages -->
    <string name="error_message_login">No se pudo iniciar sesión. Contraseña o correo electrónico incorrectos.</string>
    <string name="success_message_login">Se inició sesión con éxito.</string>
    <string name="error_message_register">No se pudo crear la cuenta. Inténtalo más tarde.</string>
    <string name="success_message_register">Se creó el usuario con éxito.</string>

    <!-- API Errors -->
    <string name="api_error_login">Error de red. No se pudo iniciar sesión.</string>

    <!-- Banners -->
    <string name="banner_home">Una nueva aventura al alcance de tu mano</string>
    <string name="banner_terms_and_services">Al crear una cuenta en Navi, acepto los términos y condiciones de servicio.</string>

    <string name="progress_message_updated">Información actualizada</string>
    <string name="progress_message_error">Error al actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Misc -->
    <string name="lorem_impsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vulputate eleifend risus ac sodales. Nulla dui mi, finibus a placerat et, condimentum vitae eros. Quisque id orci erat. Pellentesque dignissim dapibus ipsum, eget aliquet ex tempus et. Quisque nec sapien feugiat, accumsan mi volutpat, auctor dui. Donec luctus nisi lectus, quis vestibulum diam vestibulum at. Praesent auctor posuere libero. Mauris ante eros, blandit vel est in, consectetur ultrices magna. Duis a accumsan massa, porttitor consequat enim. Donec laoreet blandit convallis. Nullam faucibus maximus urna. Fusce mi turpis, varius quis tristique eget, lobortis ac odio. Sed posuere velit eu justo aliquet maximus. Donec a risus consectetur, cursus ipsum ac, ornare ligula.</string>

    <!-- Categories -->
    <string name="category_0">Caminatas</string>
    <string name="category_1">Gran altitud</string>
    <string name="category_2">Naturaleza y animales</string>
    <string name="category_3">Sitios Culturales</string>
    <string name="category_4">Gastronomía</string>
    <string name="category_5">Viajes acuáticos</string>
    <string name="category_6">Caminos interesantes</string>
    <string name="category_7">Deportes extremos</string>
    <string name="category_8">Escapadas (por definir)</string>
    <string name="category_9">No te lo puedes perder</string>

    <string name="category_description_0">Caminatas</string>
    <string name="category_description_1">Gran altitud</string>
    <string name="category_description_2">Naturaleza y animales</string>
    <string name="category_description_3">Culturales</string>
    <string name="category_description_4">Gastronomía</string>
    <string name="category_description_5">Viajes acuáticos</string>
    <string name="category_description_6">Caminos interesantes</string>
    <string name="category_description_7">Deportes extremos</string>
    <string name="category_description_8">Escapadas (por definir)</string>
    <string name="category_description_9">No te lo puedes perder</string>
</resources>