<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.fragments.guide.GuideFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_user_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/spacing_large"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/layout_social_networks"
            app:layout_constraintTop_toBottomOf="@id/title">

            <Switch
                android:id="@+id/guide_register_switch"
                style="@style/general_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_big"
                android:text="@string/question_agency"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_agency_name"
                android:visibility="gone">

                <EditText
                    android:id="@+id/guide_register_agency_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_names">

                <EditText
                    android:id="@+id/guide_register_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_last_names">

                <EditText
                    android:id="@+id/guide_register_last_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_birth_date">

                <EditText
                    android:id="@+id/guide_register_born_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:focusable="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_foundation_date"
                android:visibility="gone">

                <EditText
                    android:id="@+id/guide_register_agency_foundation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:focusable="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_country">

                <EditText
                    android:id="@+id/guide_register_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:focusable="false"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_ci">

                <EditText
                    android:id="@+id/guide_register_ci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_number">

                <EditText
                    android:id="@+id/guide_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_email">

                <EditText
                    android:id="@+id/guide_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_username">

                <EditText
                    android:id="@+id/guide_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/guide_register_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_repeat_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/guide_register_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_big"
                android:layout_marginTop="@dimen/spacing_big"
                android:text="@string/banner_terms_and_services" />

            <Button
                android:id="@+id/register_button"
                style="@style/button.sea_green"
                android:layout_marginTop="@dimen/spacing_big"
                android:enabled="false"
                android:onClick="register"
                android:text="@string/action_register" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>