<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.fragments.guide.GuideFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_user_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/spacing_large"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/layout_social_networks"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_names">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_last_names">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_birth_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_country">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field.form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noun_repeat_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_big"
                android:layout_marginTop="@dimen/spacing_big"
                android:text="@string/banner_terms_and_services" />

            <Button
                style="@style/button.sea_green"
                android:layout_marginTop="@dimen/spacing_big"
                android:onClick="login"
                android:text="@string/action_login" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>