<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="196dp"
                app:cardElevation="@dimen/elevation_default">

                <ImageView
                    android:id="@+id/profile_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="-56dp"
                android:translationZ="1dp"
                app:cardCornerRadius="@dimen/radius_circle"
                app:cardElevation="@dimen/elevation_default">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_default"
                android:layout_marginTop="@dimen/spacing_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_name"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noun_biography" />

                <TextView
                    style="@style/sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noun_biography" />

                <TextView
                    android:id="@+id/profile_biography"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_impsum" />

                <TextView
                    style="@style/sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noun_interests" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>